# metadata-store

./: .gitignore  Cargo.toml  README.md
examples/: bench.rs
src/: lib.rs
