[package]
name = "u64db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.2"
fault-injection = "1.0.9"
fnv = "1.0.7"
fs2 = "0.4.3"
log = "0.4.19"
pagetable = "0.4.3"
rayon = "1.7.0"
zstd = "0.12.4"

[dev-dependencies]
env_logger = "0.10.0"
