[package]
name = "metadata-store"
authors = ["Tyler Neely <tylerneely@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/komora-io/metadata-store"
keywords = ["multi-threaded", "performance", "index", "database", "db"]
categories = ["concurrency", "data-structures", "rust-patterns", "database-implementations"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.2"
fault-injection = "1.0.9"
fnv = "1.0.7"
fs2 = "0.4.3"
inline-array = { version = "0.1.11", features = ["serde", "concurrent_map_minimum"] }
log = "0.4.19"
pagetable = "0.4.3"
rayon = "1.7.0"
zstd = "0.12.4"

[dev-dependencies]
env_logger = "0.10.0"
